--- a/exercice 02.1/index.html
+++ b/exercice 02.1/index.html
@@ -5,6 +5,16 @@
     <title>Exercice 1</title>
   </head>
   <body>
-      <img src="images/image1.jpg" id="image1" />
+
+<!-- Changer une image avec on Onmouseover et Onmouseout -->
+
+      <img src="images/image1.jpg" onmouseover="this.src='images/image1_2.jpg'" onmouseout="this.src='images/image1.jpg'"/>
+
+				<!--       [this.scr='' ]=> pour chemin source
+      						onmouseover=  doit donner celà! -->
+
+
+
+
   </body>
 </html>
