--- a/exercice 02.3/index.html
+++ b/exercice 02.3/index.html
@@ -9,7 +9,13 @@
     <label for="nom">Votre nom  : </label><input type="text" name="nom" value="Doe" id="nom" />
     <label for="prenom">Votre prenom  : </label><input type="text" name="prenom" value="John" id="prenom" />
     <label for="ville">Votre ville  : </label><input type="text" name="ville" value="New York" id="ville" />
-    <button type="button" name="button">RAZ</button>
+    <button onclick="raz();" type="button" name="button">RAZ</button>
   </form>
+
+		<script>
+			function raz(event){
+				document.getElementById("prenom").value="";
+			}
+		</script>
 </body>
 </html>
