--- a/exercice 02.3/index.html
+++ b/exercice 02.3/index.html
@@ -6,16 +6,24 @@
 </head>
 <body>
   <form>
-    <label for="nom">Votre nom  : </label><input type="text" name="nom" value="Doe" id="nom" />
-    <label for="prenom">Votre prenom  : </label><input type="text" name="prenom" value="John" id="prenom" />
-    <label for="ville">Votre ville  : </label><input type="text" name="ville" value="New York" id="ville" />
+    <label class="ensemble" for="nom">Votre nom  : </label><input type="text" name="nom" value="Doe" id="nom" />
+    <label class="ensemble" for="prenom">Votre prenom  : </label><input type="text" name="prenom" value="John" id="prenom" />
+    <label class="ensemble" for="ville">Votre ville  : </label><input type="text" name="ville" value="New York" id="ville" />
     <button onclick="raz();" type="button" name="button">RAZ</button>
   </form>
 
 		<script>
+			var raz
+
 			function raz(event){
-				document.getElementById("prenom").value="";
+				document.getElementById('nom').value="";
+				document.getElementById('prenom').value="";
+				document.getElementById('ville').value="";
 			}
+
+			// function display(event){
+			// 	document.getElementsByClassName("display");
+			// }
 		</script>
 </body>
 </html>
